--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSONファイル生成</title>
+    <title>ライブ詳細ファイル生成ツール</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,9 +31,9 @@
             display: block;
             margin-bottom: 5px;
             font-weight: bold;
+            padding-block: 10px;
         }
         input[type="text"],
-        input[type="time"],
         textarea {
             width: 100%;
             padding: 10px;
@@ -42,6 +42,12 @@
             background-color: #333;
             color: white;
             box-shadow: 0 0 5px rgba(0, 153, 255, 0.5);
+            box-sizing: border-box;
+        }
+        .button-group {
+            display: flex;
+            justify-content: center;
+            padding: 10px;
         }
         button {
             padding: 10px 20px;
@@ -59,6 +65,13 @@
         }
         .song-group {
             margin-bottom: 30px;
+            transition: transform 0.3s ease-in-out;
+        }
+        .swap-up {
+            transform: translateY(-100%);
+        }
+        .swap-down {
+            transform: translateY(100%);
         }
         .song-group hr {
             border: 1px solid #555;
@@ -68,9 +81,11 @@
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
+            justify-content: center;
         }
         .part-button {
-            padding: 10px 20px;
+            width: 10%;
+            padding: 10px;
             background-color: #444;
             color: white;
             border: 2px solid #555;
@@ -91,12 +106,36 @@
         .remove-song:hover {
             background-color: #ff0000;
         }
+        .move-up, .move-down {
+            background-color: #ffaa00;
+            color: white;
+        }
+        .move-up:hover, .move-down:hover {
+            background-color: #ff8800;
+        }
+        .insert-song {
+            background-color: #44ff44;
+            color: white;
+        }
+        .insert-song:hover {
+            background-color: #22cc22;
+        }
+        .results-group {
+            display: flex;
+            justify-content: right;
+        }
+        .error-message {
+            color: #ff4444;
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
 
-    <h1>JSONファイル生成ツール</h1>
+    <h1>ライブ詳細ファイル生成ツール</h1>
     <div class="form-container">
+        <div id="error-message" class="error-message"></div>
         <div class="form-group">
             <label for="band-name">バンド名</label>
             <input type="text" id="band-name" placeholder="バンド名を入力してください">
@@ -109,83 +148,98 @@
 
                 <label>使用するパート</label>
                 <div class="checkbox-group">
-                    <div class="part-button selected" data-part="Ba">Ba (ベース)</div>
-                    <div class="part-button selected" data-part="Mr">Mr (マーシャル)</div>
-                    <div class="part-button selected" data-part="Jc">Jc (ジャズギター)</div>
-                    <div class="part-button selected" data-part="Dr">Dr (ドラム)</div>
-                    <div class="part-button" data-part="EP">EP (スタジオのキーボード)</div>
-                    <div class="part-button" data-part="m1">マイク1 (下手側)</div>
-                    <div class="part-button selected" data-part="m2">マイク2 (センター)</div>
-                    <div class="part-button" data-part="m3">マイク3 (上手側)</div>
-                    <div class="part-button" data-part="m4">マイク4 (ドラム)</div>
+                    <div class="part-button selected" data-part="Ba">Ba</div>
+                    <div class="part-button selected" data-part="Mr">Mr</div>
+                    <div class="part-button selected" data-part="Jc">Jc</div>
+                    <div class="part-button selected" data-part="Dr">Dr</div>
+                    <div class="part-button" data-part="EP">EP</div>
+                    <div class="part-button" data-part="Syn">Syn</div>
+                    <div class="part-button" data-part="num1">マイク1</div>
+                    <div class="part-button selected" data-part="num2">マイク2</div>
+                    <div class="part-button" data-part="num3">マイク3</div>
+                    <div class="part-button" data-part="num4">マイク4</div>
                 </div>
 
                 <label for="song-detail-1">要望</label>
                 <textarea id="song-detail-1" rows="3" placeholder="要望や詳細を入力してください"></textarea>
 
-                <button class="remove-song">曲を削除</button>
+                <div class="button-group">
+                    <button class="move-up">上に移動</button>
+                    <button class="move-down">下に移動</button>
+                    <button class="insert-song">曲を追加</button>
+                    <button class="remove-song">曲を削除</button>
+                </div>
                 <hr>
             </div>
         </div>
-
-        <button id="add-song">曲を追加</button>
-        <button id="generate-json">JSONファイルを生成</button>
+        <div class="results-group">
+            <button id="add-song">曲を最後に追加</button>
+            <button id="generate-json">ファイルを生成</button>
+        </div>
     </div>
 
     <script>
         let songCount = 1;
 
+        // 曲を追加する関数
         document.getElementById('add-song').addEventListener('click', function() {
+            addSong();
+        });
+
+        // 曲を挿入する関数
+        function addSong(insertAfter = null) {
             // 曲を追加する前に全曲の番号をリセット
             resetSongNumbers();
-            // 新しい曲グループを作成
+
+            songCount++;
             const songGroup = document.createElement('div');
             songGroup.classList.add('song-group');
-            songGroup.id = `song-group-${songCount + 1}`; // 新しいIDを付与
+            songGroup.id = `song-group-${songCount}`;
             songGroup.innerHTML = `
-                <h3>曲 ${songCount + 1}</h3>
-                <label for="song-title-${songCount + 1}">曲名</label>
-                <input type="text" id="song-title-${songCount + 1}" placeholder="曲名を入力してください">
+                <h3>曲 ${songCount}</h3>
+                <label for="song-title-${songCount}">曲名</label>
+                <input type="text" id="song-title-${songCount}" placeholder="曲名を入力してください">
 
                 <label>使用するパート</label>
                 <div class="checkbox-group">
-                    <div class="part-button selected" data-part="Ba">Ba (ベース)</div>
-                    <div class="part-button selected" data-part="Mr">Mr (マーシャル)</div>
-                    <div class="part-button selected" data-part="Jc">Jc (ジャズギター)</div>
-                    <div class="part-button selected" data-part="Dr">Dr (ドラム)</div>
-                    <div class="part-button" data-part="EP">EP (スタジオのキーボード)</div>
-                    <div class="part-button" data-part="m1">マイク1 (下手側)</div>
-                    <div class="part-button selected" data-part="m2">マイク2 (センター)</div>
-                    <div class="part-button" data-part="m3">マイク3 (上手側)</div>
-                    <div class="part-button" data-part="m4">マイク4 (ドラム)</div>
+                    <div class="part-button selected" data-part="Ba">Ba</div>
+                    <div class="part-button selected" data-part="Mr">Mr</div>
+                    <div class="part-button selected" data-part="Jc">Jc</div>
+                    <div class="part-button selected" data-part="Dr">Dr</div>
+                    <div class="part-button" data-part="EP">EP</div>
+                    <div class="part-button" data-part="Syn">Syn</div>
+                    <div class="part-button" data-part="num1">マイク1</div>
+                    <div class="part-button selected" data-part="num2">マイク2</div>
+                    <div class="part-button" data-part="num3">マイク3</div>
+                    <div class="part-button" data-part="num4">マイク4</div>
                 </div>
 
-                <label for="song-detail-${songCount + 1}">要望</label>
-             <textarea id="song-detail-${songCount + 1}" rows="3" placeholder="要望や詳細を入力してください"></textarea>
+                <label for="song-detail-${songCount}">要望</label>
+                <textarea id="song-detail-${songCount}" rows="3" placeholder="要望や詳細を入力してください"></textarea>
 
-             <button class="remove-song">曲を削除</button>
-              <hr>
+                <div class="button-group">
+                    <button class="move-up">上に移動</button>
+                    <button class="move-down">下に移動</button>
+                    <button class="insert-song">曲を追加</button>
+                    <button class="remove-song">曲を削除</button>
+                </div>
+                <hr>
             `;
-            document.getElementById('songs-container').appendChild(songGroup);
 
-            // 新しいパートボタンにイベントリスナーを追加
+            if (insertAfter) {
+                insertAfter.insertAdjacentElement('afterend', songGroup);
+            } else {
+                document.getElementById('songs-container').appendChild(songGroup);
+            }
+
+            // 新しいパートボタンと機能ボタンにイベントリスナーを追加
             addPartButtonEventListeners(songGroup);
             addRemoveSongEventListener(songGroup);
+            addMoveEventListeners(songGroup);
+            addInsertSongEventListener(songGroup);
 
             // 曲番号を再設定
             resetSongNumbers();
-        });
-
-        // 曲番号をリセットする関数
-        function resetSongNumbers() {
-             const songGroups = document.querySelectorAll('.song-group');
-             songGroups.forEach((songGroup, index) => {
-                const songNumber = index + 1;
-                songGroup.id = `song-group-${songNumber}`;
-                songGroup.querySelector('h3').textContent = `曲 ${songNumber}`;
-                songGroup.querySelector(`input[id^="song-title-"]`).id = `song-title-${songNumber}`;
-                songGroup.querySelector(`textarea[id^="song-detail-"]`).id = `song-detail-${songNumber}`;
-            });
         }
 
         // パートボタンのクリックイベントを設定する関数
@@ -203,32 +257,114 @@
             const removeButton = songGroup.querySelector('.remove-song');
             removeButton.addEventListener('click', function() {
                 songGroup.remove();
+                resetSongNumbers();
             });
         }
 
-        // 初期のパートボタンと削除ボタンのイベントリスナーを設定
+        // 移動ボタンにイベントリスナーを追加する関数
+        function addMoveEventListeners(songGroup) {
+            const moveUpButton = songGroup.querySelector('.move-up');
+            const moveDownButton = songGroup.querySelector('.move-down');
+
+            moveUpButton.addEventListener('click', function() {
+                const prevGroup = songGroup.previousElementSibling;
+                if (prevGroup && prevGroup.classList.contains('song-group')) {
+                    // アニメーションを追加
+                    songGroup.classList.add('swap-up');
+                    prevGroup.classList.add('swap-down');
+
+                    // アニメーションが終わったら要素を入れ替え
+                    setTimeout(() => {
+                        songGroup.parentNode.insertBefore(songGroup, prevGroup);
+                        songGroup.classList.remove('swap-up');
+                        prevGroup.classList.remove('swap-down');
+                        resetSongNumbers();
+                    }, 300); // アニメーション時間と一致させる
+                }
+            });
+
+            moveDownButton.addEventListener('click', function() {
+                const nextGroup = songGroup.nextElementSibling;
+                if (nextGroup && nextGroup.classList.contains('song-group')) {
+                    // アニメーションを追加
+                    songGroup.classList.add('swap-down');
+                    nextGroup.classList.add('swap-up');
+
+                    // アニメーションが終わったら要素を入れ替え
+                    setTimeout(() => {
+                        songGroup.parentNode.insertBefore(nextGroup, songGroup);
+                        songGroup.classList.remove('swap-down');
+                        nextGroup.classList.remove('swap-up');
+                        resetSongNumbers();
+                    }, 300); // アニメーション時間と一致させる
+                }
+            });
+        }
+
+        // 曲を挿入するボタンにイベントリスナーを追加する関数
+        function addInsertSongEventListener(songGroup) {
+            const insertButton = songGroup.querySelector('.insert-song');
+            insertButton.addEventListener('click', function() {
+                addSong(songGroup);
+            });
+        }
+
+        // 曲番号をリセットする関数
+        function resetSongNumbers() {
+            const songGroups = document.querySelectorAll('.song-group');
+            songGroups.forEach((songGroup, index) => {
+                const songNumber = index + 1;
+                songGroup.id = `song-group-${songNumber}`;
+                songGroup.querySelector('h3').textContent = `曲 ${songNumber}`;
+                songGroup.querySelector(`input[id^="song-title-"]`).id = `song-title-${songNumber}`;
+                songGroup.querySelector(`textarea[id^="song-detail-"]`).id = `song-detail-${songNumber}`;
+            });
+            songCount = songGroups.length;
+        }
+
+        // 初期のパートボタン、削除ボタン、移動ボタン、挿入ボタンのイベントリスナーを設定
         addPartButtonEventListeners(document.getElementById('song-group-1'));
         addRemoveSongEventListener(document.getElementById('song-group-1'));
+        addMoveEventListeners(document.getElementById('song-group-1'));
+        addInsertSongEventListener(document.getElementById('song-group-1'));
 
         // JSONファイルを生成する関数
         document.getElementById('generate-json').addEventListener('click', function() {
-            const bandName = document.getElementById('band-name').value;
-            const songs = [];
+            const errorMessageElement = document.getElementById('error-message');
+            errorMessageElement.textContent = ""; // エラーメッセージをクリア
 
-            document.querySelectorAll('.song-group').forEach((songGroup, index) => {
-                const title = songGroup.querySelector(`#song-title-${index + 1}`).value;
+            const bandName = document.getElementById('band-name').value;
+            if (!bandName) {
+                errorMessageElement.textContent = "バンド名を入力してください。";
+                return;
+            }
+
+            const songGroups = document.querySelectorAll('.song-group');
+            if (songGroups.length === 0) {
+                errorMessageElement.textContent = "少なくとも1曲は追加してください。";
+                return;
+            }
+
+            const songs = [];
+            for (let i = 0; i < songGroups.length; i++) {
+                const songTitle = songGroups[i].querySelector(`input[id^="song-title-"]`).value;
+                if (!songTitle) {
+                    errorMessageElement.textContent = `曲 ${i + 1} の曲名を入力してください。`;
+                    return;
+                }
+
                 const uses = [];
-                songGroup.querySelectorAll('.part-button.selected').forEach(button => {
+                songGroups[i].querySelectorAll('.part-button.selected').forEach(button => {
                     uses.push(button.getAttribute('data-part'));
                 });
-                const detail = songGroup.querySelector(`#song-detail-${index + 1}`).value;
+                const detail = songGroups[i].querySelector(`textarea[id^="song-detail-"]`).value;
 
                 songs.push({
-                    Title: title,
+                    Title: songTitle,
                     Uses: uses,
                     detail: detail
                 });
-            });
+            }
 
             const jsonData = {
                 name: bandName,
@@ -237,6 +373,7 @@
 
             const jsonString = JSON.stringify(jsonData, null, 4);
             downloadJSON(jsonString, `${bandName}.json`);
+            alert("ダウンロードしました！");
         });
 
         // JSONファイルをダウンロードする関数
