マイクをmicに変更

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                     <div class="part-button selected" data-part="Dr">Dr</div>
                     <div class="part-button" data-part="EP">EP</div>
                     <div class="part-button" data-part="Syn">Syn</div>
-                    <div class="part-button" data-part="num1">マイク1</div>
-                    <div class="part-button selected" data-part="num2">マイク2</div>
-                    <div class="part-button" data-part="num3">マイク3</div>
-                    <div class="part-button" data-part="num4">マイク4</div>
+                    <div class="part-button" data-part="num1">mic1</div>
+                    <div class="part-button selected" data-part="num2">mic2</div>
+                    <div class="part-button" data-part="num3">mic3</div>
+                    <div class="part-button" data-part="num4">mic4</div>
                 </div>
 
                 <label for="song-detail-1">要望</label>
@@ -208,10 +208,10 @@
                     <div class="part-button selected" data-part="Dr">Dr</div>
                     <div class="part-button" data-part="EP">EP</div>
                     <div class="part-button" data-part="Syn">Syn</div>
-                    <div class="part-button" data-part="num1">マイク1</div>
-                    <div class="part-button selected" data-part="num2">マイク2</div>
-                    <div class="part-button" data-part="num3">マイク3</div>
-                    <div class="part-button" data-part="num4">マイク4</div>
+                    <div class="part-button" data-part="num1">mic1</div>
+                    <div class="part-button selected" data-part="num2">mic2</div>
+                    <div class="part-button" data-part="num3">mic3</div>
+                    <div class="part-button" data-part="num4">mic4</div>
                 </div>
 
                 <label for="song-detail-${songCount}">要望</label>
