--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
             margin-bottom: 20px;
             font-weight: bold;
         }
+        .display-img {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+            box-shadow: 0 0 15px rgba(0, 153, 255, 0.7);
+            border: 2px solid #444;
+            border-radius: 10px;
+             background-color: #222;
+             padding: 5px;
+        }
+        .display-img img {
+            width: 95%;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -139,6 +153,9 @@
         <div class="form-group">
             <label for="band-name">バンド名</label>
             <input type="text" id="band-name" placeholder="バンド名を入力してください">
+        </div>
+        <div class="display-img">
+            <img src="./img/display.png">
         </div>
         <div id="songs-container">
             <div class="song-group" id="song-group-1">
